feat(api): statistics
